gearset/main/default/objects/AlexFieldHistoryObject__c/AlexFieldHistoryObject__c.object-meta.xml
<CustomObject>
    <description>https://gearsethq.slack.com/archives/C4HFWBMC2/p1596799702312600</description>
    <label>AlexFieldHistoryObject</label>
    <nameField>
        <label>AlexFieldHistoryObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlexFieldHistoryObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>