gearset/main/default/objects/AlexFieldHistoryObject__c/fields/FieldWeChangeHistoryTrack__c.field-meta.xml
<CustomField>
    <fullName>FieldWeChangeHistoryTrack__c</fullName>
    <defaultValue>Today()-1</defaultValue>
    <label>FieldWeChangeHistoryTrack</label>
    <type>Date</type>
</CustomField>