gearset/main/default/objects/AlexFieldHistoryObject__c/fields/FieldWeDoNotTrackHistory__c.field-meta.xml
<CustomField>
    <fullName>FieldWeDoNotTrackHistory__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>FieldWeDoNotTrackHistory</label>
    <required>true</required>
    <type>Date</type>
</CustomField>