gearset/main/default/objects/AlexFieldHistoryObject__c/fields/FieldWeDoTrackHistory__c.field-meta.xml
<CustomField>
    <fullName>FieldWeDoTrackHistory__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>FieldWeDoTrackHistory</label>
    <required>true</required>
    <type>Date</type>
</CustomField>